--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             Select a <span class="font-bold">json</span> file 
             with structure below (14 elements max): <code class="block mt-1">[{ "day": "mon", "amount": 24.32 }...]</code>
           </label>
-          <input class="hidden" name="file-input" type="file" accept=".json" />
+          <input class="hidden" id="file-input" name="file-input" type="file" accept=".json" />
           <p class="hidden text-red-700 mt-2">
             Error: <span></span>
           </p>
@@ -47,7 +47,7 @@
       </div>
       <div class="bg-very-pale-orange rounded-xl py-6 px-3 lg:px-6">
         <section class="flex flex-col">
-          <h1 class="text-2xl text-dark-brown font-bold pl-1 mb-2 lg:mb-4">Spending - Last 7 days</h1>
+          <h2 class="text-2xl text-dark-brown font-bold pl-1 mb-2 lg:mb-4">Spending - Last 7 days</h2>
           <div class="h-48 lg:h-52 cursor-pointer">
             <canvas></canvas>
           </div>
