replace 'add' with 'use', revert back from h2 to h1 for spending title

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <main class="flex flex-wrap justify-center items-center min-h-screen font-dm-sans bg-cream">
     <div class="w-full max-w-xs lg:max-w-md">
       <div class="flex flex-row justify-end py-2 px-1">
-        <p class="text-xs text-medium-brown">Click the logo to add custom data</p>
+        <p class="text-xs text-medium-brown">Click the logo to use custom data</p>
       </div>
       <header class="flex flex-col rounded-xl bg-soft-red py-4 px-6 mb-4">
         <div class="flex flex-row justify-between items-center">
@@ -47,7 +47,7 @@
       </div>
       <div class="bg-very-pale-orange rounded-xl py-6 px-3 lg:px-6">
         <section class="flex flex-col">
-          <h2 class="text-2xl text-dark-brown font-bold pl-1 mb-2 lg:mb-4">Spending - Last 7 days</h2>
+          <h1 class="text-2xl text-dark-brown font-bold pl-1 mb-2 lg:mb-4">Spending - Last 7 days</h1>
           <div class="h-48 lg:h-52 cursor-pointer">
             <canvas></canvas>
           </div>
