accessibility: fixes vague alt text for logo

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             <h2 class="text-lg lg:text-3xl font-bold">$921.48</h2>
           </div>
           <button type="button">
-            <img class="w-14 h-10" src="./images/logo.svg" alt="logo" />
+            <img class="w-14 h-10" src="./images/logo.svg" alt="custom data clickable logo" />
           </button>
         </div>
       </header>
