--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,8 @@
       </div>
       <div class="bg-very-pale-orange rounded-2xl py-6 px-3 lg:px-6">
         <section class="flex flex-col">
-          <h1 class="text-2xl lg:text-3xl text-dark-brown font-bold pl-1 mb-2 lg:mb-4">Spending - Last 7 days</h1>
-          <div class="h-48 cursor-pointer">
+          <h1 class="text-2xl lg:text-3xl text-dark-brown font-bold pl-1 mb-2 lg:py-2 lg:mb-4">Spending - Last 7 days</h1>
+          <div class="h-48 lg:h-72 cursor-pointer">
             <canvas></canvas>
           </div>
           <div class="h-1 mx-2 border-b"></div>
